--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -18,6 +18,7 @@ header {
     top: 0;
     left: 0;
     border-bottom: 5px solid blue;
+
 }
 
 header a {
@@ -105,6 +106,8 @@ button {
     margin: 24px;
     cursor: pointer;
     font-weight: bold;
+    display: block;
+
 }
 
 #foto {
